--- a/Notebook_Pos_Self_Salience_APA.tex
+++ b/Notebook_Pos_Self_Salience_APA.tex
@@ -423,8 +423,8 @@ Post-hoc \emph{t}-tests revealed that shapes associated with Good Person (550 \(
 In this experiment, we repeated the results pattern that the positive moral valenced stimuli has an advantage over the neutral or the negative valenced association. Moreover, with a croass task analysis, we didn't found evidence that the experiment task interacted with moral valence, suggesting that the effect might not be effect by experiment task.
 These findings suggested that the facilitation effect of positive moral valence is robust and not affected by task. This robust effect detected by the associative learning is unexpected.
 
-\hypertarget{experiment-3-a}{%
-\section{Experiment 3 a}\label{experiment-3-a}}
+\hypertarget{experiment-3a}{%
+\section{Experiment 3a}\label{experiment-3a}}
 
 To examine the modulation effect of positive valence was an intrinsic, self-referential process, we designed study 3. In this study, moral valence was assigned to both self and a stranger. We hypothesized that the modulation effect of moral valence will be stronger for the self than for a stranger.
 
@@ -436,21 +436,102 @@ To examine the modulation effect of positive valence was an intrinsic, self-refe
 
 38 college students (15 female, age = 21.92 \(\pm\) 2.16) participated in experiment 3a. All of them were right-handed, and all had normal or correted-to-normal vision. Informed consent was obtained from all participants prior to the experiment according to procedures approved by a local ethics committee. One female and one male student did not finish the experiment, and 9 participants' data were excluded from analysis because less than 60\% overall accuracy, remains 29 participants (9 female, age = 22.07 \(\pm\) 2.19).
 
+\hypertarget{design}{%
+\subsubsection{Design}\label{design}}
+
+Study 3a combined moral valence with self-relevance, hence the experiment has a 2 × 3 × 2 within-subject design. The first variable was self-relevance, include two levels: self-relevance vs.~stranger-relevance; the second variable was moral valence, include good, neutral and bad; the third variable was the matching between shape and label: match vs.~mismatch.
+
+\hypertarget{stimuli}{%
+\subsubsection{Stimuli}\label{stimuli}}
+
+The stimuli used in study 3a share the same parameters with experiment 1 \& 2. 6 shapes were included (triangle, square, circle, trapezoid, diamond, regular pentagon), as well as 6 labels (good self, neutral self, bad self, good person, bad person, neutral person). To match the concreteness of the label, we asked participant to chosen an unfamiliar name of their own gender to be the stranger.
+
+\hypertarget{procedure-4}{%
+\subsubsection{Procedure}\label{procedure-4}}
+
+After being fully explained and signed the informed consent, participants were instructed to chose a name that can represent a stranger with same gender as the participant themselves, from a common Chinese name pool. Before experiment, the experimenter explained the meaning of each label to participants. For example, the \enquote{good self} mean the morally good side of themselves, them could imagine the moment when they do something's morally applauded, \enquote{bad self} means the morally bad side of themselves, they could also imagine the moment when they doing something morally wrong, and \enquote{neutral self} means the aspect of self that doesn't related to morality, they could imagine the moment when they doing something irrelevant to morality. In the same sense, the \enquote{good other}, \enquote{bad other}, and \enquote{neutral other} means the three different aspects of the stranger, whose name was chosen before the experiment. Then, the experiment proceeded as study 1a. Each participant finished 6 blocks, each have 120 trials. The sequence of trials was pseudo-randomized so that there are 10 matched trials for each condition and 10 non-matched trials for each condition (good self, neutral sef, bad self, good other, neutral other, bad other) for each block.
+
+\hypertarget{data-analysis-4}{%
+\subsubsection{Data Analysis}\label{data-analysis-4}}
+
+Data analysis followed strategies described in the general method section. Reaction times and \emph{d} prime data were analyzed as in study 1 and study 2, except that one more within-subject variable (i.e., self-relevance) was included in the repeated measures ANOVA.
+
+\hypertarget{results-4}{%
+\subsection{Results}\label{results-4}}
+
+0.00 correct trials with less than 200ms reaction times were exlucded.
+
+\hypertarget{analaysis-of-d-prime.-3}{%
+\subsubsection{Analaysis of d prime.}\label{analaysis-of-d-prime.-3}}
+
+There was evidence for the main effect of valence, \(F(2, 56) = 8.75\), \(\mathit{MSE} = 0.23\), \(p < .001\), \(\hat{\eta}^2_G = .046\), and main effect of self-relevance, \(F(1, 28) = 3.97\), \(\mathit{MSE} = 0.43\), \(p = .056\), \(\hat{\eta}^2_G = .020\).
+
+Paired t test showed that the Good-Person condition (2.86 \(\pm\) 0.16) was with greater \emph{d} prime than Netural condition (2.28 \(\pm\) 0.15, \emph{t}(32) = 4.46, \emph{p} = 0.002, Cohen's \emph{d} = 0.587). We also found that the Bad-Person condition (2.47 \(\pm\) 0.135) has also greater \emph{d} prime than neutral condition , \emph{t}(32) = 4.15, \emph{p} = 0.007, Cohen's \emph{d} = 0.396). There was no-significant difference between Good and bad conidition, \emph{t}(32) = -1,667, \emph{p} = 0.233, Cohen's \emph{d} = -0.191.
+
+\hypertarget{analaysis-of-reaction-time.-3}{%
+\subsubsection{Analaysis of reaction time.}\label{analaysis-of-reaction-time.-3}}
+
+The results of reaction times of matchness trials showed similiar pattern as the \emph{d} prime data.
+
+We found intercation between Matchness and Valence (\(F(1.79, 50.1) = 21.84\), \(\mathit{MSE} = 751.59\), \(p < .001\), \(\hat{\eta}^2_G = .028\)) and then analyzed the matched trials and mismatched trials separately, as in previous experiments.
+
+For the matched trials, we found that main effect of valence \(F(1.91, 53.47) = 26.23\), \(\mathit{MSE} = 1,151.69\), \(p < .001\), \(\hat{\eta}^2_G = .083\), but not the effect of identity \(F(1, 28) = 0.04\), \(\mathit{MSE} = 3,113.57\), \(p = .852\), \(\hat{\eta}^2_G = .000\), nor the interaction \(F(1.63, 45.52) = 1.89\), \(\mathit{MSE} = 3,057.78\), \(p = .169\), \(\hat{\eta}^2_G = .014\).
+For the mismatched trials, we found the main effect of Identity \(F(1, 28) = 5.81\), \(\mathit{MSE} = 518.36\), \(p = .023\), \(\hat{\eta}^2_G = .008\), but not the main effect of valence \(F(1.98, 55.37) = 0.83\), \(\mathit{MSE} = 340.09\), \(p = .440\), \(\hat{\eta}^2_G = .001\) or interaction between the two \(F(1.87, 52.39) = 1.39\), \(\mathit{MSE} = 792.98\), \(p = .258\), \(\hat{\eta}^2_G = .005\).
+
+\hypertarget{experiment-3b}{%
+\section{Experiment 3b}\label{experiment-3b}}
+
+In study 3a, participants had to remember 6 pairs of association, which cause high cogitive load during the whole exepriment. To eliminate the influence of cognitive load, we conducted study 3b, in which participant learn three aspect of self and stranger seperately in to consecutive task. We hypothesize that we will replicate the pattern of study 3a, i.e., the effect of moral valence only occurs for self-relevant conditions.
+
+\hypertarget{method-4}{%
+\subsection{Method}\label{method-4}}
+
+\hypertarget{participants-5}{%
+\subsubsection{Participants}\label{participants-5}}
+
+Study 3b were finished in 2017, at that time we have calculated that the effect size (Cohen's d) of good-person (or good-self) vs.~bad-person (or bad-other) was between 0.47 \textasciitilde{} 0.53, based on study 1a, 1b, 2, 3a, 4a, and 4b. Based on this effect size, we estimated that 54 participants would allow we to detect the effec size of Cohen's = 0.5 with 95\% power and alpha = 0.05, using G*power 3.192 (Faul, Erdfelder, Buchner, \& Lang, 2009; Faul, Erdfelder, Lang, \& Buchner, 2007). Therefore, we planned to stop after we arrived this number. During the data collected at Wenzhou University, 61 participants (45 females; 19 to 25 years of age, age = 20.42 \(\pm\) 1.77) came to the testing room and we tested all of them during a single day. All participants were right-handed, and all had normalneutral or corrected-to-normal vision. Informed consent was obtained from all participants prior to the experiment according to procedures approved by a local ethics committee. 4 participants' data were excluded from analysis because their over all accuracy was lower than 60\%, 1 more participant waw excluded because of zero hit rate for one condition, leaving 56 participants (43 females; 19 to 25 years old, age = 20.27 \(\pm\) 1.60).
+
+\hypertarget{design-1}{%
+\subsubsection{Design}\label{design-1}}
+
+Study 3b has the same experimental design as 3a, with a 2× 3× 2 within-subject design. The first variable was self-relevance, include two levels: self-relevant vs.~stranger-relevant; the second variable was moral valence, include good, neutral and bad; the third variable was the matching between shape and label: match vs.~mismatch.
+Stimuli. The stimuli used in study 3b share the same parameters with experiment 3a. 6 shapes were included (triangle, square, circle, trapezoid, diamond, regular pentagon), as well as 6 labels, but the labels changed to \enquote{good self}, \enquote{neutral self}, \enquote{bad self}, \enquote{good him/her}, bad him/her'', \enquote{neutral him/her}, the stranger's label is consistent with participants' gender. Same as study 3a, we asked participant to chosen an unfamiliar name of their own gender to be the stranger before showing them the relationship. Note, because of implementing error, the personal distance data didn't collect for this experiment.
+
+\hypertarget{procedure-5}{%
+\subsubsection{Procedure}\label{procedure-5}}
+
+In this experiment, participants finished two matching tasks, i.e., self-matching task, and other-matching task. In the self-matching task, participants first associate the three aspects of self to three different shapes, and then perform the matching task. In the other-matching task, participants first associate the three aspects of the stranger to three different shapes, and then perform the matching task. The order of self-task and other-task are counter-balanced among participants.
+Different from experiment 3a, after presenting the stimuli pair for 100ms, participant has 1900 ms to response, and they were feedbacked with both accuracy and reaction time.
+As in study 3a, before each task, the intruction showed the meaning of each label to participants. The self-matching task and other-matching task were randomized between participants. Each participant finished 6 blocks, each have 120 trials.
+
+\hypertarget{data-analysis-5}{%
+\subsubsection{Data Analysis}\label{data-analysis-5}}
+
+Data analysis is the same as study 3a.
+
+\hypertarget{results-5}{%
+\subsection{Results}\label{results-5}}
+
+\hypertarget{analysis-of-d-prime.}{%
+\subsubsection{\texorpdfstring{Analysis of \emph{d} prime.}{Analysis of d prime.}}\label{analysis-of-d-prime.}}
+
+There was evidence for the main effect of valence, \(F(2, 110) = 5.29\), \(\mathit{MSE} = 0.26\), \(p = .006\), \(\hat{\eta}^2_G = .011\), and main effect of self-relevance, \(F(1, 55) = 5.07\), \(\mathit{MSE} = 0.88\), \(p = .028\), \(\hat{\eta}^2_G = .019\), as well as the intercation, \(F(2, 110) = 16.18\), \(\mathit{MSE} = 0.24\), \(p < .001\), \(\hat{\eta}^2_G = .033\).
+
 \hypertarget{experiment-4a}{%
 \section{Experiment 4a}\label{experiment-4a}}
 
 In study 1-3 participants made explicit judgements about moral associations. In Experiment 4, we examined whether the effects of moral valence occur even when the moral valence information might not be relevent to the task. In this study participants made perceptual match judgements to associations between self-referential labels and shapes (cf.~Sui et al., 2012), but we presented labels of different moral valence levels in the shapes.
 
-\hypertarget{participants-5}{%
-\subsection{Participants}\label{participants-5}}
+\hypertarget{participants-6}{%
+\subsection{Participants}\label{participants-6}}
 
 64 participants (37 female, age = 19.7 \(\pm\) 1.22) participated the current study, 32 of them were from Tsinghua Universtiy in 2015, the rest were from Wenzhou University parpticipated in 2017. All participants were right-handed, and all had normalneutral or corrected-to-normalneutral vision. Informed consent was obtained from all participants prior to the experiment according to procedures approved by a local ethics committee. The data of three participants from Tsinghua site and two participants from Wenzhou site were excluded from analysis because their accuracy was close to chance (\textless{} 0.6). The results for the remaining 59 participants (33 female, age = 19.78 \(\pm\) 1.2) were analyzed and reported.
 
-\hypertarget{results-4}{%
-\subsection{Results}\label{results-4}}
+\hypertarget{results-6}{%
+\subsection{Results}\label{results-6}}
 
-\hypertarget{analaysis-of-d-prime.-3}{%
-\subsubsection{Analaysis of d prime.}\label{analaysis-of-d-prime.-3}}
+\hypertarget{analaysis-of-d-prime.-4}{%
+\subsubsection{Analaysis of d prime.}\label{analaysis-of-d-prime.-4}}
 
 We conducted 2 (Idenity: self v. other) by 3 (morlaity: good, neutral, bad) repeated measure ANOVA:
 
@@ -479,8 +560,8 @@ Identity $\times$ Morality & 4.12 & 2 & 116 & 0.14 & .019 & .004\\
 
 We further examined the effect of valence for both self and other.
 
-\hypertarget{analaysis-of-reaction-time.-3}{%
-\subsubsection{Analaysis of reaction time.}\label{analaysis-of-reaction-time.-3}}
+\hypertarget{analaysis-of-reaction-time.-4}{%
+\subsubsection{Analaysis of reaction time.}\label{analaysis-of-reaction-time.-4}}
 
 We conducted 2 (Matchness: match v. mismatch) by 2 (Idenity: self v. other) by 3 (morlaity: good, neutral, bad) repeated measure ANOVA:
 
@@ -543,14 +624,14 @@ Other - Self 72.2 7.06 58 10.231 \textless{}.0001
 \hypertarget{experiment-4b}{%
 \section{Experiment 4b:}\label{experiment-4b}}
 
-\hypertarget{participants-6}{%
-\subsection{Participants}\label{participants-6}}
+\hypertarget{participants-7}{%
+\subsection{Participants}\label{participants-7}}
 
-\hypertarget{results-5}{%
-\subsection{Results}\label{results-5}}
+\hypertarget{results-7}{%
+\subsection{Results}\label{results-7}}
 
-\hypertarget{analaysis-of-d-prime.-4}{%
-\subsubsection{Analaysis of d prime.}\label{analaysis-of-d-prime.-4}}
+\hypertarget{analaysis-of-d-prime.-5}{%
+\subsubsection{Analaysis of d prime.}\label{analaysis-of-d-prime.-5}}
 
 We conducted 2 (Idenity: self v. other) by 3 (morlaity: good, neutral, bad) repeated measure ANOVA:
 
@@ -600,8 +681,8 @@ We further examined the effect of valence for both self and other.
 \end{Highlighting}
 \end{Shaded}
 
-\hypertarget{results-6}{%
-\section{Results}\label{results-6}}
+\hypertarget{results-8}{%
+\section{Results}\label{results-8}}
 
 \hypertarget{discussion-3}{%
 \section{Discussion}\label{discussion-3}}
